--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "socket.io": "1.7.2",
     "socket.io-client": "2.2.0",
     "ts-node": "^8.2.0",
+    "tslint": "^5.18.0",
     "typescript": "^3.5.3",
     "uuid": "^3.3.2"
   },
