--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ts-node": "ts-node src/socket/server/types.ts",
     "time-service": "ts-node src/time_service/index.ts"
+    "ts-node": "ts-node src/socket/index.ts"
   },
   "repository": {
     "type": "git",
