--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ts-node": "ts-node src/socket/server/types.ts"
+    "ts-node": "ts-node src/socket/server/types.ts",
+    "time-service": "ts-node src/time_service/index.ts"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "dependencies": {
     "@types/node": "^12.6.8",
     "@types/ws": "^6.0.1",
+    "node-fetch": "^2.6.0",
     "socket.io": "1.7.2",
     "socket.io-client": "2.2.0",
     "ts-node": "^8.2.0",
@@ -30,6 +32,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.5.0",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32"
   }
