--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prebuild": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ts-node": "ts-node src/socket/index.ts"
+    "ts-node": "ts-node src/socket/index.ts",
     "time-service": "ts-node src/time_service/index.ts"
   },
   "repository": {
