--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@eska/eska-common",
-  "version": "1.0.7",
+  "name": "eska-common",
+  "version": "1.0.15",
   "description": "Libraries and entities for common usage",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
