--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/node": "^12.6.8",
     "@types/ws": "^6.0.1",
+    "axios": "^0.19.0",
     "node-fetch": "^2.6.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "2.2.0",
